# grumble

./: LICENSE.txt  README.md  grumble.py  pyproject.toml
src/grumble/: __about__.py  __init__.py  chat.py  ollama_utils.py  pdf_utils.py  ui_utils.py
