[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grumble"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Alan Franco", email = "alanfr.engel@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.hatch.envs.default]
dependencies = [
    "langchain_community==0.2.5",
    "pdfplumber==0.11.1",
    "PyPDF2==3.0.1",
    "Requests==2.32.3",
    "streamlit==1.36.0",
    "streamlit_chat==0.1.1",
]

[project.urls]
Documentation = "https://github.com/fzappa/grumble#readme"
Issues = "https://github.com/fzappa/grumble/issues"
Source = "https://github.com/fzappa/grumble"

[tool.hatch.version]
path = "src/grumble/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/grumble tests}"

[tool.coverage.run]
source_pkgs = ["grumble", "tests"]
branch = true
parallel = true
omit = [
  "src/grumble/__about__.py",
]

[tool.coverage.paths]
grumble = ["src/grumble", "*/grumble/src/grumble"]
tests = ["tests", "*/grumble/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
